# SatoshiRig

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOY.md  Dockerfile  PROJECT_STATUS.md  README.md  RELEASE.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/commands/: d.md
.github/workflows/: ci.yml  docker-publish.yml  make-package-public.yml  release.yml
config/: config.toml
src/BtcSoloMinerGpu/: __init__.py  __main__.py  cli.py  config.py  miner.py
src/BtcSoloMinerGpu/clients/: pool_client.py
src/BtcSoloMinerGpu/core/: miner.py  state.py
src/SatoshiRig/: cli.py  config.py  db.py  logging_config.py  miner.py
src/SatoshiRig/clients/: __init__.py  pool_client.py
src/SatoshiRig/core/: __init__.py  gpu_compute.py  miner.py
src/SatoshiRig/utils/: __init__.py  formatting.py
src/SatoshiRig/web/: __init__.py  server.py  stats_persistence.py  status.py
tests/: __init__.py  test_smoke.py
tests/integration/: __init__.py
tests/unit/: __init__.py
