[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SatoshiRig"
version = "2.0.0"
description = "Bitcoin solo miner with configurable backends and Docker support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "SatoshiRig Maintainers", email = "maintainers@example.com" }]
dependencies = [
  "requests==2.32.3",
  "colorama==0.4.6"
]

[project.scripts]
satoshirig = "SatoshiRig.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["SatoshiRig*"]


