[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SatoshiRig"
version = "2.25.23"
description = "Bitcoin solo miner with configurable backends and Docker support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "SatoshiRig Maintainers", email = "maintainers@example.com" }]
dependencies = [
  "requests==2.32.3",
  "colorama==0.4.6",
  "psutil>=5.9.0",
  "flask==3.0.0",
  "flask-socketio==5.3.6",
  "python-socketio==5.10.0"
]

[project.optional-dependencies]
gpu-monitoring = [
  "nvidia-ml-py>=12.0.0"
]
gpu-mining = [
  "pycuda>=2023.1",
  "pyopencl>=2023.1.2",
  "numpy>=1.20.0"
]

[project.scripts]
satoshirig = "SatoshiRig.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["SatoshiRig*"]


